Removing some overflow: clips to prevent getting stuck in a bad scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-html {
-  /* Always put scroll on actual components, not whole-ass page */
-  overflow-y: clip;
-}
-
 html, body, #root {
   height: 100%;
 }
