--- a/src/components/TimerComponent/TimerComponent.scss
+++ b/src/components/TimerComponent/TimerComponent.scss
@@ -132,5 +132,7 @@
     .timer__timer {
         padding: 0;
         width: 100%;
+        min-height: 540px;
+        overflow-y: auto;
     }
 }
